# PyWeb-7

./: README.md  config.ini  my_select.py  pyproject.toml
migrations/versions/: 7dadb17e8be2_init.py
